--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,23 @@
-<h4>Random stuff generator.
-   <p> Autor Wojtas.</p>
-    Test app that generates stuff.
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>About</title>
+  </head>
+  <body>
+<h4><img>Random stuff generator.<br>
+ v. 1.0.0<br>
+<img src="picture.jpg" style="width:128px;height:128px;"></img>
 </h4>
+</body>
+</html>
